--- a/src/components/Service.astro
+++ b/src/components/Service.astro
@@ -1,7 +1,7 @@
 <div class="card flex flex-col pt-20 md:mt-0 mx-4 md:mx-12 xl:mx-10 2xl:mx-24 md:pt-24 dark:text-white transition duration-700 ease-in-out" id="servicio">
     <div class="tittle">
         <p class="text-center leading-normal mb-6 mx-5 text-4xl md:text-5xl md:mx-20 md:mb-0 xl:text-6xl">
-            TIPO DE VEHICULOS
+            TIPO DE SERVICIOS
         </p>
     </div>
     <div class="flex flex-col md:mt-0">
