--- a/src/components/Service.astro
+++ b/src/components/Service.astro
@@ -8,8 +8,11 @@
 
         <div class="flex flex-col p-5 md:p-7 xl:flex-row justify-around bg-slate-200 md:mt-16 xl:mt-16 xl:px-10 xl:py-16 rounded-xl dark:bg-slate-800">
             <div class="flex flex-col text-center justify-around xl:flex-1 xl:w-3/5 ">
-                <p class="text-3xl md:text-3xl xl:text-5xl font-bold">MOTOS</p>
-                <p class="text-xl md:text-2xl leading-9 xl:text-3xl md:leading-relaxed xl:leading-relaxed py-5 xl:px-10 xl:py-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque animi necessitatibus aliquam, accusantium praesentium tenetur rerum vero iure minima consequuntur deleniti, cumque voluptatibus nisi ducimus doloremque quidem amet sed voluptatum.</p>
+                <p class="text-3xl md:text-3xl xl:text-5xl font-bold">PERSONALIZADOS</p>
+                <p class="text-xl md:text-2xl leading-9 xl:text-3xl md:leading-relaxed xl:leading-relaxed py-5 xl:px-10 xl:py-5">
+                    Ofrecemos stickers en varios tamaños, personalizados según tus necesidades, ideales para teléfonos, laptops y superficies planas. 
+                    Diseños creativos y duraderos para que puedas expresarte o promocionar tu marca.
+                </p>
             </div>
             <div class="py-4 md:py-6 mx-auto xl:flex xl:flex-2 xl:w-2/5 md:justify-center">
                 <img src="image-tree.jpg" alt="" class="w-64 md:w-72 xl:w-96 border-4 border-black dark:border-white rounded-xl transition duration-700 ease-in-out hover:scale-110 md:hover:scale-110 xl:hover:scale-125">
@@ -21,8 +24,11 @@
                 <img src="image-four.jpg" alt="" class="w-64 md:w-72 xl:w-96 border-4 border-black dark:border-white rounded-xl transition duration-700 ease-in-out hover:scale-125">
             </div>
             <div class="flex flex-col text-center justify-around xl:flex-1 xl:w-3/5">
-                <p class="text-3xl md:text-3xl xl:text-5xl font-bold">BUSES</p>
-                <p class="text-xl md:text-2xl leading-9 xl:text-3xl md:leading-relaxed xl:leading-relaxed py-5 xl:px-10 xl:py-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque animi necessitatibus aliquam, accusantium praesentium tenetur rerum vero iure minima consequuntur deleniti, cumque voluptatibus nisi ducimus doloremque quidem amet sed voluptatum.</p>
+                <p class="text-3xl md:text-3xl xl:text-5xl font-bold">CARROS PARTICULARES</p>
+                <p class="text-xl md:text-2xl leading-9 xl:text-3xl md:leading-relaxed xl:leading-relaxed py-5 xl:px-10 xl:py-5">
+                    Diseñamos stickers para carros particulares, adaptados a cualquier superficie plana del vehículo. 
+                    Son resistentes y perfectos para darle un toque personal o publicitario a tu auto.
+                </p>
             </div>
             <div class="py-4 mx-auto xl:hidden">
                 <img src="image-four.jpg" alt="" class="w-64 md:w-72 xl:w-96 border-4 border-black dark:border-white rounded-xl transition duration-700 ease-in-out hover:scale-105 md:hover:scale-110 xl:hover:scale-125">
@@ -32,7 +38,10 @@
         <div class="flex flex-col p-5 mt-5 md:p-7 xl:flex-row justify-around bg-slate-200 md:mt-16 xl:mt-16 xl:px-10 xl:py-16 rounded-xl dark:bg-slate-800">
             <div class="flex flex-col text-center justify-around xl:flex-1 xl:w-3/5">
                 <p class="text-3xl md:text-3xl xl:text-5xl font-bold">CAMIONES</p>
-                <p class="text-xl md:text-2xl leading-9 xl:text-3xl md:leading-relaxed xl:leading-relaxed py-5 xl:px-10 xl:py-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque animi necessitatibus aliquam, accusantium praesentium tenetur rerum vero iure minima consequuntur deleniti, cumque voluptatibus nisi ducimus doloremque quidem amet sed voluptatum.</p>
+                <p class="text-xl md:text-2xl leading-9 xl:text-3xl md:leading-relaxed xl:leading-relaxed py-5 xl:px-10 xl:py-5">
+                    Creamos stickers para camiones, ideales para grandes superficies. Nuestros diseños publicitarios son duraderos, 
+                    visibles y soportan condiciones climáticas adversas.
+                </p>
             </div>
             <div class="py-4 mx-auto md:flex md:flex-2 md:w-2/5 md:justify-center">
                 <img src="image-five.jpg" alt="" class="w-64 md:w-72 xl:w-96 border-4 border-black dark:border-white rounded-xl transition duration-700 ease-in-out hover:scale-105 md:hover:scale-110 xl:hover:scale-125">
@@ -45,7 +54,10 @@
             </div>
             <div class="flex flex-col text-center justify-around xl:flex-1 md:xl-3/5">   
                 <p class="text-3xl md:text-3xl xl:text-5xl font-bold">TAXIS</p>
-                <p class="text-xl md:text-2xl leading-9 xl:text-3xl md:leading-relaxed xl:leading-relaxed py-5 xl:px-10 xl:py-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque animi necessitatibus aliquam, accusantium praesentium tenetur rerum vero iure minima consequuntur deleniti, cumque voluptatibus nisi ducimus doloremque quidem amet sed voluptatum.</p>
+                <p class="text-xl md:text-2xl leading-9 xl:text-3xl md:leading-relaxed xl:leading-relaxed py-5 xl:px-10 xl:py-5">
+                    Stickers especiales para taxis, personalizados para facilitar la identificación o publicidad. 
+                    Se aplican fácilmente y son resistentes, garantizando alta visibilidad en movimiento.
+                </p>
             </div>
             <div class="py-4 mx-auto xl:hidden">
                 <img src="image-six.jpg" alt="" class="w-64 md:w-72 xl:w-96 border-4 border-black dark:border-white rounded-xl transition duration-700 ease-in-out hover:scale-105 md:hover:scale-110 xl:hover:scale-125">
@@ -54,8 +66,11 @@
 
         <div class="flex flex-col p-5 mt-5 md:p-7 xl:flex-row justify-around bg-slate-200 md:mt-16 xl:mt-16 xl:px-10 xl:py-16 rounded-xl dark:bg-slate-800">
             <div class="flex flex-col text-center justify-around xl:flex-1 xl:w-3/5">
-                <p class="text-3xl md:text-3xl xl:text-5xl font-bold">CARROS</p>
-                <p class="text-xl md:text-2xl leading-9 xl:text-3xl md:leading-relaxed xl:leading-relaxed py-5 xl:px-10 xl:py-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque animi necessitatibus aliquam, accusantium praesentium tenetur rerum vero iure minima consequuntur deleniti, cumque voluptatibus nisi ducimus doloremque quidem amet sed voluptatum.</p>
+                <p class="text-3xl md:text-3xl xl:text-5xl font-bold">PLACAS</p>
+                <p class="text-xl md:text-2xl leading-9 xl:text-3xl md:leading-relaxed xl:leading-relaxed py-5 xl:px-10 xl:py-5">
+                    Fabricamos placas de acrílico semi luminiscentes para autobuses, indicadoras de rutas y destinos. 
+                    Duraderas y claras, garantizan visibilidad en todo tipo de condiciones.
+                </p>
             </div>
             <div class="py-4 mx-auto md:flex md:flex-2 md:w-2/5 md:justify-center">
                 <img src="image-seven.jpg" alt="" class="w-64 md:w-72 xl:w-96 border-4 border-black dark:border-white rounded-xl transition duration-700 ease-in-out hover:scale-105 md:hover:scale-110 xl:hover:scale-125">
