--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -37,7 +37,7 @@ const whatsappMensaje = "Hola, me gustaría obtener más información sobre sus 
 			</div>
 		</div>
 	</div>
-	<div class="card2 mt-10 md:mt-10 xl:mt-10 2xl:mt-28 text-center text-lg md:text-3xl px-5 md:px-3 xl:px-10 py-10 md:mx-8 md:divide-y-2 divide-black bg-slate-200 rounded-xl dark:divide-white dark:bg-slate-800 dark:text-white transition duration-700 ease-in-out">
+	<div class="card2 mt-10 md:mt-10 xl:mt-10 2xl:mt-28 text-center text-lg md:text-3xl px-5 md:px-3 xl:px-10 py-10 md:mx-8  bg-slate-200 rounded-xl  dark:bg-slate-800 dark:text-white transition duration-700 ease-in-out">
 		<p class="tittle2 text-3xl md:text-3xl xl:text-5xl pb-7">TRADICION Y CONFIANZA</p>
 		<div class="grid grid-cols-1 md:grid-cols-1 xl:grid-cols-3 gap-4 md:pt-10 xl:divide-x-2 divide-slate-900 dark:divide-white">
 		  <!-- Primera columna -->
@@ -73,35 +73,32 @@ const whatsappMensaje = "Hola, me gustaría obtener más información sobre sus 
 			</div>
 		  </div>
 		</div>
-		<div class="w-full p-0 m-0 mt-10 md:px-14 md:pt-16 md:mt-10 xl:mt-14 xl:pt-20 xl:mb-10">
+		<div class="w-full p-0 m-0 md:px-14 md:pt-16 md:mt-10 xl:mt-14 xl:pt-20 xl:mb-10">
 			<div class="relative overflow-hidden rounded-xl">
 				<div id="carousel" class="flex transition-transform duration-500 ease-out">
 					<div class="w-full flex-shrink-0 h-80 xl:h-full flex flex-col items-center justify-center text-white">
-						<img src="image-tree.jpg" alt="" class="w-64 md:w-72 xl:w-96 border-4 border-black dark:border-white rounded-xl transition duration-700 ease-in-out">
-					</div>
-					<div class="w-full flex-shrink-00 h-80 xl:h-full flex flex-col items-center justify-center text-white">
-						<img src="image-tree.jpg" alt="" class="w-64 md:w-72 xl:w-96 border-4 border-black dark:border-white rounded-xl transition duration-700 ease-in-out">
+						<img src="img_example1.svg" alt="" class="w-64 md:w-72 xl:w-[500px] border-4 border-black dark:border-white rounded-xl transition duration-700 ease-in-out">
 					</div>
 					<div class="w-full flex-shrink-0 h-80 xl:h-full flex flex-col items-center justify-center text-white">
-						<img src="image-tree.jpg" alt="" class="w-64 md:w-72 xl:w-96 border-4 border-black dark:border-white rounded-xl transition duration-700 ease-in-out">
+						<img src="img_example2.svg" alt="" class="w-64 md:w-72 xl:w-[500px] border-4 border-black dark:border-white rounded-xl transition duration-700 ease-in-out">
 					</div>
 					<div class="w-full flex-shrink-0 h-80 xl:h-full flex flex-col items-center justify-center text-white">
-						<img src="image-tree.jpg" alt="" class="w-64 md:w-72 xl:w-96 border-4 border-black dark:border-white rounded-xl transition duration-700 ease-in-out">
+						<img src="img_example3.svg" alt="" class="w-64 md:w-72 xl:w-[500px] border-4 border-black dark:border-white rounded-xl transition duration-700 ease-in-out">
 					</div>
 					<div class="w-full flex-shrink-0 h-80 xl:h-full flex flex-col items-center justify-center text-white">
-						<img src="image-tree.jpg" alt="" class="w-64 md:w-72 xl:w-96 border-4 border-black dark:border-white rounded-xl transition duration-700 ease-in-out">
+						<img src="img_example4.svg" alt="" class="w-64 md:w-72 xl:w-[500px] border-4 border-black dark:border-white rounded-xl transition duration-700 ease-in-out">
 					</div>
 					<div class="w-full flex-shrink-0 h-80 xl:h-full flex flex-col items-center justify-center text-white">
-						<img src="image-tree.jpg" alt="" class="w-64 md:w-72 xl:w-96 border-4 border-black dark:border-white rounded-xl transition duration-700 ease-in-out">
+						<img src="img_example5.svg" alt="" class="w-64 md:w-72 xl:w-[500px] border-4 border-black dark:border-white rounded-xl transition duration-700 ease-in-out">
 					</div>
 				</div>
-				<button id="prevBtn" class="absolute top-1/2 left-0 transform -translate-y-1/2 bg-black bg-opacity-30 hover:bg-opacity-50 rounded-full p-3 focus:outline-none transition-all duration-300 ease-in-out">
-					<svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+				<button id="prevBtn" class="absolute top-1/2 left-0 transform -translate-y-1/2 bg-black dark:bg-white hover:bg-opacity-50 rounded-full p-3 focus:outline-none transition-all duration-300 ease-in-out">
+					<svg class="w-6 h-6 text-white dark:text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
 					</svg>
 				</button>
-				<button id="nextBtn" class="absolute top-1/2 right-0 transform -translate-y-1/2 bg-black bg-opacity-30 hover:bg-opacity-50 rounded-full p-3 focus:outline-none transition-all duration-300 ease-in-out">
-					<svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+				<button id="nextBtn" class="absolute top-1/2 right-0 transform -translate-y-1/2 bg-black dark:bg-white hover:bg-opacity-50 rounded-full p-3 focus:outline-none transition-all duration-300 ease-in-out">
+					<svg class="w-6 h-6 text-white dark:text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
 					</svg>
 				</button>
