--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -4,7 +4,7 @@ const whatsappMensaje = "Hola, me gustaría obtener más información sobre sus 
 ---
 
 <div class="card mx-20 md:mx-20 xl:mx-10 2xl:mx-16 flex flex-col justify-between" id="home">
-	<div class="flex flex-col md:flex-row justify-between pt-24 md:pt-32 md:pl-8">
+	<div class="flex flex-col md:flex-row justify-between pt-24 md:pt-32 md:pl-8 xl:pr-12">
 		<div class="left flex flex-col items-center justify-around flex-1 mb-10 md:w-6/12 xl:w-3/5 md:mr-3 md:mt-10 xl:mt-6">	
 			<p class="text-center tittle dark:text-white transition duration-700 ease-in-out text-5xl">ANUNCIA-T</p>
 			<p class="subtittle mx-2 md:mx-2 text-center mt-10">
@@ -39,7 +39,7 @@ const whatsappMensaje = "Hola, me gustaría obtener más información sobre sus 
 	</div>
 	<div class="card2 mt-10 md:mt-10 xl:mt-10 2xl:mt-28 text-center text-lg md:text-3xl px-5 md:px-3 xl:px-10 py-10 md:mx-8  bg-slate-200 rounded-xl  dark:bg-slate-800 dark:text-white transition duration-700 ease-in-out">
 		<p class="tittle2 text-3xl md:text-3xl xl:text-5xl pb-7">TRADICION Y CONFIANZA</p>
-		<div class="grid grid-cols-1 md:grid-cols-1 xl:grid-cols-3 gap-4 md:pt-10 xl:divide-x-2 divide-slate-900 dark:divide-white">
+		<div class="grid grid-cols-1 md:grid-cols-1 xl:grid-cols-3 gap-4 md:pt-10">
 		  <!-- Primera columna -->
 		  <div class="p-5 md:px-20 xl:px-5 xl:mt-5">
 			<p class="text-lg md:text-lg xl:text-3xl leading-relaxed md:leading-relaxed xl:leading-relaxed font-semibold">
