--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -9,7 +9,9 @@
 
         <div class="xl:basis-2/4 p-7 xl:px-10 xl:py-10 xl:mr-6 text-center bg-slate-200 rounded-xl dark:bg-slate-800">
             <p class="text-3xl md:text-3xl xl:text-4xl font-semibold mb-3 xl:mb-7 md:mx-4">NUESTRA MISIÓN</p>
-            <p class="text-xl md:text-2xl xl:text-3xl leading-9 md:leading-relaxed xl:leading-relaxed py-5">Convertir cada vehículo en una herramienta de comunicación efectiva, llevando tu mensaje a donde más importa: las calles. 
+            <p class="text-xl md:text-2xl xl:text-3xl leading-9 md:leading-relaxed xl:leading-relaxed py-5">
+                Convertir cada vehículo en una herramienta de comunicación efectiva, llevando tu mensaje a donde más importa: las calles.</p>
+            <p class="text-xl md:text-2xl xl:text-3xl leading-9 md:leading-relaxed xl:leading-relaxed py-5">
                 Nos dedicamos a transformar empresas, publicitarias que generen alto impacto, ayudando a las marcas a alcanzar sus objetivos de visibilidad.</p>
             <div class="flex items-center justify-center mt-5 xl:mt-7">
                 <img src="arrowup-black.svg" alt="" class="w-10 xl:w-16 dark:hidden ">
@@ -19,8 +21,11 @@
 
         <div class="xl:basis-2/4 mt-6 md:mt-0 xl:mt-0 p-7 xl:px-10 xl:py-10 xl:ml-6 text-center bg-slate-200 rounded-xl dark:bg-slate-800">
             <p class="text-3xl md:text-3xl xl:text-4xl font-semibold mb-3 xl:mb-7">NUESTRO EQUIPO</p>
-            <p class="text-xl md:text-2xl xl:text-3xl leading-9 md:leading-relaxed xl:leading-relaxed py-5">Contamos con un equipo multidisciplinario de expertos en diseño, publicidad y marketing que trabajan mano a mano para 
-                ofrecer soluciones personalizadas a cada uno de nuestros clientes. Su creatividad y experiencia son la clave de nuestro éxito.</p>
+            <p class="text-xl md:text-2xl xl:text-3xl leading-9 md:leading-relaxed xl:leading-relaxed py-5">
+                Nuestra creatividad y experiencia son la clave de nuestro éxito a lo largo de estos años en el mercado de la publicidad.</p>
+            <p class="text-xl md:text-2xl xl:text-3xl leading-9 md:leading-relaxed xl:leading-relaxed py-5">
+                Contamos con un equipo multidisciplinario de expertos en diseño, publicidad y marketing que trabajan mano a mano para 
+                ofrecer soluciones personalizadas.</p>
                 <div class="flex items-center justify-center mt-5 xl:mt-7">
                     <img src="group-black.svg" alt="" class="w-10 xl:w-16 dark:hidden">
                     <img src="group-white.svg" alt="" class="w-10 xl:w-16 hidden dark:block">
