--- a/src/components/Service.astro
+++ b/src/components/Service.astro
@@ -44,7 +44,7 @@
                 </p>
             </div>
             <div class="py-4 mx-auto md:flex md:flex-2 md:w-2/5 md:justify-center">
-                <img src="img_truck.svg" alt="" class="w-64 object-cover md:w-72 xl:w-96 border-4 border-black dark:border-white rounded-xl transition duration-700 ease-in-out hover:scale-105 md:hover:scale-110 xl:hover:scale-125">
+                <img src="img_truck.svg" alt="" class="w-64 object-cover md:w-72 xl:w-[360px] border-4 border-black dark:border-white rounded-xl transition duration-700 ease-in-out hover:scale-105 md:hover:scale-110 xl:hover:scale-125">
             </div>
         </div>
 
@@ -73,7 +73,7 @@
                 </p>
             </div>
             <div class="py-4 mx-auto md:flex md:flex-2 md:w-2/5 md:justify-center">
-                <img src="img_plate.svg" alt="" class="w-64 md:w-72 xl:w-[570px] border-4 border-black dark:border-white rounded-xl transition duration-700 ease-in-out hover:scale-105 md:hover:scale-110 xl:hover:scale-125">
+                <img src="img_plate.svg" alt="" class="w-64 md:w-72 xl:w-[575px] border-4 border-black dark:border-white rounded-xl transition duration-700 ease-in-out hover:scale-105 md:hover:scale-110 xl:hover:scale-125">
             </div>
         </div>
 
