--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import AboutUs from '../components/AboutUs.astro';
 import ContacUs from '../components/ContacUs.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Anuncia-T">
 	<Navbar />
 	<main>
 		<Home />
